# NT_PF

./: .env.example  .gitignore  .zenodo.json  CITATION.cff  DATASET_README.md  LICENSE  README.md  pyproject.toml  requirements-extraction.txt  requirements-lock.txt  requirements-runtime.txt  requirements.txt  rodar_sistema.bat  rodar_sistema.py  run_local.ps1  run_local.py  setup.ps1  setup_extraction.ps1  setup_local.ps1  setup_runtime.ps1  streamlit_app.py
.streamlit/: config.toml
artigo/: README.md  TD_clusterizacao_noticias_pf.docx  TD_clusterizacao_noticias_pf.md  TD_clusterizacao_noticias_pf_regenerado.docx  apresentacao.pptx  cartões.txt  main.tex  references.bib
artigo/figures/: frequencia_clusters_por_ano.csv  hdbscan_ruido_por_representacao.csv  tabela_clusters_canonicos_top15.csv  tabela_top5_por_ano.csv
artigo/media/: generate_ciclo_aprendizado_figure.py  generate_figuras_metodologia.py  generate_hdbscan_ruido_figure.py
artigo_referencia/: 33778-949-27693-1-10-20250313.txt  metodologia_clusterizacao_noticias_pf.docx
docs/: arquitetura_treinamento_incremental.md  resultado_rodada_final_15_openai.md
scripts/: docx_to_markdown.py  pf_analise_qualitativa.py  pf_classify_body.py  pf_clean_regex_rules.py  pf_deduplicate_markdown.py  pf_generate_artigo_figures.py  pf_incremental_methodology_run.py  pf_learn_regex_from_clusters.py  pf_llm_metadata.py  pf_llm_models.py  pf_operacoes_pipeline.py  pf_regex_classifier.py  pf_regex_rules.py  pf_reset_generated_artifacts.py  project_config.py  resume_final_15_llm.py  run_final_15_llm.py
(+38 files in other folders)
