[project]
name = "nt-pf"
version = "0.1.0"
description = "Atlas analitico sobre noticias de operacoes da Policia Federal brasileira."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "matplotlib==3.10.9",
    "numpy==2.4.3",
    "ollama==0.6.1",
    "openai==2.32.0",
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "scikit-learn==1.8.0",
]

[dependency-groups]
extraction = [
    "beautifulsoup4==4.14.3",
    "docling==2.82.0",
    "lxml==6.0.2",
    "requests==2.33.0",
]
agents = [
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
]

[tool.uv]
package = false
